# video-decoder

./: .releaserc.json  README.md  package.json  test.webm  test123.webm  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
demuxer/: Cargo.toml
demuxer/data/: test_vp9_codec_private.webm
demuxer/src/: frames.rs  lib.rs  log.rs
demuxer/src/video/: frames.rs  mkv.rs  mod.rs  mp4.rs  vpcc.rs
lib/: Decoder.ts  Options.ts  Renderer.ts  Worker.ts  types.d.ts
lib/worker/: Message.ts  Page.ts  Pages.ts  WebGLRenderer.ts  WebWorkerDecoder.ts  WebWorkerDecoders.ts
plugins/: resolve-base64.ts  wasm-pack.ts
scripts/: generate-test-videos.js
src/: App.tsx  LoadedDecoder.ts  Renderer.ts  Scroller.tsx  vite-env.d.ts
src/assets/: sample_vp8.webm  sample_vp9.webm
src/assets/videos/: video_2s_30fps_1280x720_av1.mkv  video_2s_30fps_1920x1080_vp8.webm  video_2s_30fps_1920x1080_vp9.mkv  video_2s_30fps_1920x1080_vp9.webm  video_2s_30fps_640x480_av1.mkv  video_2s_30fps_640x480_av1.webm  video_2s_30fps_640x480_vp8.webm  video_2s_30fps_640x480_vp9.mkv  video_2s_60fps_1280x720_av1.mkv  video_2s_60fps_1280x720_vp8.mkv  video_2s_60fps_1280x720_vp9.mkv  video_2s_60fps_1920x1080_av1.webm  video_2s_60fps_1920x1080_vp8.webm  video_2s_60fps_1920x1080_vp9.mkv  video_2s_60fps_1920x1080_vp9.webm  video_2s_60fps_640x480_av1.mkv  video_5s_30fps_1280x720_av1.mkv  video_5s_30fps_1280x720_vp8.webm  video_5s_30fps_1280x720_vp9.mkv  video_5s_30fps_1920x1080_av1.webm  video_5s_30fps_1920x1080_vp8.mkv  video_5s_30fps_1920x1080_vp9.mkv  (+13 more)
