[package]
name = "video-decoder"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.65"
wasm-bindgen-futures = "0.4.38"
matroska-demuxer = "0.5.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'VideoDecoder',
  'VideoFrame',
  'EncodedVideoChunk',
  'EncodedVideoChunkInit',
  'EncodedVideoChunkType'
]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
